--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p class="font-Roboto text-base text-[#525560] font-normal text-center">Mauris morbi sed dignissim a in nec aliquam fringilla et. Mattis elit dignissim nibh sit.</p>
     </div> 
     <div class="block mx-auto mt-12 mb-20">
-      <img  src="/image/Image(3).png" alt="image">
+      <img  src="image/Image(3).png" alt="image">
     </div>
     </section>
     <section class="px-27.5 pt-21.5 text-center font-bold gap-6  container mx-auto">
