--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <h2 class="text-[#1D2130] font-Roboto font-bold text-2xl text-start mb-8">Transform Your Idea Into Reality with Ether a Leading Digital Agency</h2>
         <div>
          <ul class="list-disc mt-4 pl-5 ">
-           <li class="text-start font-normal text-[#525560] text-xl font-Roboto mb-8">Et morbi vitae lobortis nam odio. Faucibus vitae vel neque nullam in in lorem platea mattis.</li>
-           <li class="text-start font-normal text-[#525560] text-xl font-Roboto mb-8">Viverra at diam nunc non ornare. Sed ultricies pulvinar nunc, lacus sem. Tellus aliquam ut euismod cursus dui lectus. Ut amet, cras volutpat dui. A bibendum viverra eu cras.</li>
-           <li class="text-start font-normal text-[#525560] text-xl font-Roboto mb-8">Mauris morbi sed dignissim a in nec aliquam fringilla et. </li>
-           <li class="text-start font-normal text-[#525560] text-xl font-Roboto mb-8">Consectetur feugiat quis hac enim nullam in enim.</li>
+           <li class="text-start font-normal text-[#525560] text-xl font-Roboto mb-8 ml-4">Et morbi vitae lobortis nam odio. Faucibus vitae vel neque nullam in in lorem platea mattis.</li>
+           <li class="text-start font-normal text-[#525560] text-xl font-Roboto mb-8 ml-4">Viverra at diam nunc non ornare. Sed ultricies pulvinar nunc, lacus sem. Tellus aliquam ut euismod cursus dui lectus. Ut amet, cras volutpat dui. A bibendum viverra eu cras.</li>
+           <li class="text-start font-normal text-[#525560] text-xl font-Roboto mb-8 ml-4">Mauris morbi sed dignissim a in nec aliquam fringilla et. </li>
+           <li class="text-start font-normal text-[#525560] text-xl font-Roboto mb-8 ml-4">Consectetur feugiat quis hac enim nullam in enim.</li>
          </ul>
         </div>
       </div>
@@ -57,9 +57,8 @@
         <p class="text-start font-Roboto text-xl text-[#525560] font-normal mb-8">Viverra at diam nunc non ornare. Sed ultricies pulvinar nunc, lacus sem. Tellus aliquam ut euismod cursus dui lectus. Ut amet, cras volutpat dui. A bibendum viverra eu cras.</p>
       </div>
     </section>
-<section class="bg-[#0B0706] px-28 py-24 text-white">
+<section class="bg-[#0B0706] px-28 py-24 text-white mt-28">
   <div class="flex justify-between items-start gap-20 max-w-7xl mx-auto">
-
     <!-- COLUMN 1: Logo -->
     <div>
       <img src="/image/Logo(4).png" alt="second-logo">
